--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: "Aestethe";
+  src: url("./assets/Aesthete.ttf") format("truetype");
+}
+@font-face {
+  font-family: "poppins";
+  src: url("./assets/Poppins-Light.ttf") format("truetype");
+}
+@font-face {
+  font-family: "poppins-bold";
+  src: url("./assets/Poppins-ExtraBold.ttf") format("truetype");
+}
+
 * {
   box-sizing: content-box;
 }
@@ -20,7 +33,7 @@
 } */
 
 html {
-  background: #62714e;
+  background: #656439;
 }
 
 html:before {
